feat: add Endpoint for list a workspace for actually authorized user
